--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "illuminate/database": "5.5.*",
         "php": ">=7.0",
         "slim/slim": "3.12.2",
-        "slim/twig-view": "^2.5"
+        "slim/twig-view": "^2.5",
+        "dflydev/fig-cookies": "^2.0"
     },
     "require-dev": {
         "composer/composer": "^1.9"
