--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "illuminate/database": "5.5.*",
         "php": ">=7.0",
         "slim/slim": "3.12.2",
-        "slim/twig-view": "^2.5",
+        "slim/twig-view": "2.5",
         "dflydev/fig-cookies": "1.0.2"
     },
     "require-dev": {
