--- a/composer.json
+++ b/composer.json
@@ -1,27 +1,29 @@
 {
     "name": "project/mywishlist",
     "type": "project",
+    "description": "Projet PHP",
     "authors": [
         {
-            "name": "Flavien Chagras"
+            "name": "Flavien Chagras",
+            "role": "Developer"
         },
         {
-            "name": "Lucas Blaise"
+            "name": "Lucas Blaise",
+            "role": "Developer"
         }
     ],
+    "require": {
+        "illuminate/database": "5.5.*",
+        "php": ">=7.0",
+        "slim/slim": "3.*",
+        "slim/twig-view": "2.5.0",
+        "dflydev/fig-cookies": "1.0.2",
+        "slim/flash": "^0.4.0",
+        "ext-json": "*"
+    },
     "autoload": {
         "psr-4": {
             "App\\": "app/"
         }
-    },
-    "require": {
-        "illuminate/database": "5.5.*",
-        "php": ">=7.0",
-        "slim/slim": "3.12.2",
-        "slim/twig-view": "2.5",
-        "dflydev/fig-cookies": "1.0.2"
-    },
-    "require-dev": {
-        "composer/composer": "^1.9"
     }
 }
